Closed Bug 1763093 Opened 2 years ago Closed 2 years ago

Crash in [@ OOM | unknown | SwitchToFiber]

Categories

(Toolkit :: Crash Reporting, defect)

Firefox 100
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 + fixed
firefox101 + fixed

People

(Reporter: calixte, Assigned: rkraesig)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/eaefa881-0fa4-4864-bfc1-7dadc0220403

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 8 frames of crashing thread:

0 kernelbase.dll SwitchToFiber 
1 xul.dll RunOnTemporaryStack toolkit/crashreporter/breakpad-client/windows/crash_generation/temporary_stack.cc:73
2 ntdll.dll RtlpTpWaitCallback 
3 ntdll.dll TppExecuteWaitCallback 
4 ntdll.dll TppWorkerThread 
5 kernel32.dll BaseThreadInitThunk 
6 mozglue.dll patched_BaseThreadInitThunk toolkit/xre/dllservices/mozglue/WindowsDllBlocklist.cpp:572
7 ntdll.dll RtlUserThreadStart 

There are 4 crashes (from 4 installations) in nightly 100 starting with buildid 20220403090644. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1758654.

[1] https://hg.mozilla.org/mozilla-central/rev?node=a07bb9e2ffe8

Flags: needinfo?(rkraesig)

The machines in the crashes have very little memory available, no wonder that our large allocation cause them to fail. Raymond do you think it would be possible to soft-fail here, running without the fiber if there isn't enough memory available?

Has Regression Range: --- → yes

Yes. (Under the circumstances, I expect we'll still crash; but it's only likely, not certain.)

Working on a patch now.

Flags: needinfo?(rkraesig)
Assignee: nobody → rkraesig
Status: NEW → ASSIGNED
Pushed by rkraesig@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/00021097701b
fall back to running on the existing thread  r=gsvelto
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Crash Signature: [@ OOM | unknown | SwitchToFiber] → [@ OOM | unknown | SwitchToFiber] [@ SwitchToFiber]
Crash Signature: [@ OOM | unknown | SwitchToFiber] [@ SwitchToFiber] → [@ OOM | unknown | SwitchToFiber] [@ SwitchToFiber]
No longer blocks: 1758654

The patch landed in nightly and beta is affected.
:rkraesig, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(rkraesig)

(In reply to Release mgmt bot [:suhaib / :marco/ :calixte] from comment #7)

:rkraesig, is this bug important enough to require an uplift?

No, but it's important enough to require a rollback of the original patch.

Flags: needinfo?(rkraesig)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: