Bug 1763093 - fall back to running on the existing thread  r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D143000